--- a/www/css/index.css
+++ b/www/css/index.css
@@ -91,8 +91,7 @@ body {
     .container .thirteen.columns                { width: 760px; }
     .container .fourteen.columns                { width: 820px; }
     .container .fifteen.columns                 { width: 880px; }
-    .container .sixteen.columns                 { width: 100%;
-    						margin: 25% 25%;}
+    .container .sixteen.columns                 { width: 100%;}
 
     .container .one-third.column                { width: 300px; }
     .container .two-thirds.column               { width: 620px; }
