--- a/www/css/index.css
+++ b/www/css/index.css
@@ -65,7 +65,7 @@ body {
 /* #Base 960 Grid
 ================================================== */
 
-    .container                                  { position: relative; width: 100%; margin: 0 auto; padding: 0; }
+    .container                                  { position: relative; width: 100%; margin-top 25%: ; padding: 0; }
     .container .column,
     .container .columns                         { float: left; display: inline; /*margin-left: 10px; margin-right: 10px;*/ }
     .row                                        { margin-bottom: 20px; }
@@ -91,8 +91,7 @@ body {
     .container .thirteen.columns                { width: 760px; }
     .container .fourteen.columns                { width: 820px; }
     .container .fifteen.columns                 { width: 880px; }
-    .container .sixteen.columns                 { width: 100%;
-    						height: 25%;	}
+    .container .sixteen.columns                 { width: 100%;	}
 
     .container .one-third.column                { width: 300px; }
     .container .two-thirds.column               { width: 620px; }
