--- a/www/css/index.css
+++ b/www/css/index.css
@@ -351,6 +351,7 @@ body {
 
 /* #Lists
 ================================================== */
+/*	
 	ul, ol { margin-bottom: 20px; }
 	ul { list-style: none outside; }
 	ol { list-style: decimal; }
@@ -365,7 +366,7 @@ body {
 	li { line-height: 18px; margin-bottom: 12px; }
 	ul.large li { line-height: 21px; }
 	li p { line-height: 21px; }
-
+*/
 /* #Images
 ================================================== */
 
@@ -393,18 +394,19 @@ body {
 	  -moz-border-radius: 3px;
 	  -webkit-border-radius: 3px;
 	  border-radius: 3px;
-	  color: url(img/door_button.png) no-repeat 0 0;
+	  /*color: url(img/door_button.png) no-repeat 0 0;*/
 	  display: inline-block;
 	  font-size: 11px;
 	  font-weight: bold;
 	  text-decoration: none;
-	  text-shadow: 0 1px rgba(255, 255, 255, .75);
+	  text-shadow: 0 1px rgba(255, 255, 255, .75); 
+	  
 	  /*cursor: pointer; */
-	  margin-bottom: 20px;
+	  /*margin-bottom: 20px;
 	  line-height: normal;
 	  padding: 8px 10px;
 	  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
-
+*/
 	.button:hover,
 	button:hover,
 	input[type="submit"]:hover,
@@ -418,10 +420,10 @@ body {
 		/*background: #ddd -o-linear-gradient(top, rgba(255,255,255,.3) 0%,rgba(0,0,0,.3) 100%); /* Opera11.10+ */
 		/*background: #ddd -ms-linear-gradient(top, rgba(255,255,255,.3) 0%,rgba(0,0,0,.3) 100%); /* IE10+ */
 		/*background: #ddd linear-gradient(top, rgba(255,255,255,.3) 0%,rgba(0,0,0,.3) 100%); /* W3C */
-	  //*border: 1px solid #888;
-	  border-top: 1px solid #aaa;
-	  border-left: 1px solid #aaa; }
-*/
+	  border: 0px solid #888;
+	  border-top: 0px solid #aaa;
+	  border-left: 0px solid #aaa; }
+
 	.button:active,
 	button:active,
 	input[type="submit"]:active,
@@ -436,7 +438,7 @@ body {
 		background: #ccc -o-linear-gradient(top, rgba(255,255,255,.35) 0%,rgba(10,10,10,.4) 100%); /* Opera11.10+ */
 		background: #ccc -ms-linear-gradient(top, rgba(255,255,255,.35) 0%,rgba(10,10,10,.4) 100%); /* IE10+ */
 		background: #ccc linear-gradient(top, rgba(255,255,255,.35) 0%,rgba(10,10,10,.4) 100%); /* W3C */ }
-
+/*
 	.button.full-width,
 	button.full-width,
 	input[type="submit"].full-width,
@@ -446,7 +448,7 @@ body {
 		padding-left: 0 !important;
 		padding-right: 0 !important;
 		text-align: center; }
-
+*/
 	/* Fix for odd Mozilla border & padding issues */
 	button::-moz-focus-inner,
 	input::-moz-focus-inner {
@@ -457,7 +459,7 @@ body {
 
  /* #Forms
 ================================================== */
-
+/*
 	form {
 		margin-bottom: 20px; }
 	fieldset {
@@ -508,7 +510,7 @@ body {
 		font-weight: normal;
 		font-size: 13px;
 		color: #444; }
-
+*/
 /* #Misc
 ================================================== */
 	.remove-bottom { margin-bottom: 0 !important; }
