--- a/www/css/index.css
+++ b/www/css/index.css
@@ -380,11 +380,12 @@ body {
 	#form_div {
 		
 	}
-
-	
+/* screen mellan 480 - 639px */
+@media only screen and (max-width: 639px) {	
 	.textboxA
 	{
-		font-size: 25px;
+		
+		font-size: 100px;
 		top: 30%;
 		position: absolute;
 		height: 12.5%;
@@ -393,7 +394,7 @@ body {
 	}
 	.textboxL
 	{
-		font-size: 25px;
+		font-size: 100px;
 		top: 47.5%;
 		position: absolute;
 		height: 12.5%;
@@ -402,7 +403,7 @@ body {
 	}
 	
 	.submitknapp{
-		font-size: 30px;
+		font-size: 100px;
 		position: absolute;
 		width: 85%;
 		text-align: right;
@@ -411,8 +412,78 @@ body {
 		margin-right: 15%;
 		border: 1px solid green ;
 	}
+}	
+/* screen mellan 640 - 800px */
+@media only screen and (min-width: 640px) and (max-width: 800px) {	
+	.textboxA
+	{
+		
+		font-size: 120px;
+		top: 30%;
+		position: absolute;
+		height: 12.5%;
+		width: 70%;
+		margin-left: 15%;
+	}
+	.textboxL
+	{
+		font-size: 120px;
+		top: 47.5%;
+		position: absolute;
+		height: 12.5%;
+		width: 70%;
+		margin-left: 15%;
+	}
 	
+	.submitknapp{
+		font-size: 120px;
+		position: absolute;
+		width: 85%;
+		text-align: right;
+		top: 65%;
+		float: right;
+		margin-right: 15%;
+		border: 1px solid green ;
+	}
+}		
+/* screen mellan 801 - 1080px */
+@media only screen and (min-width: 801px) and (max-width: 1080px) {	
+	.textboxA
+	{
+		
+		font-size: 140px;
+		top: 30%;
+		position: absolute;
+		height: 12.5%;
+		width: 70%;
+		margin-left: 15%;
+	}
+	.textboxL
+	{
+		font-size: 140px;
+		top: 47.5%;
+		position: absolute;
+		height: 12.5%;
+		width: 70%;
+		margin-left: 15%;
+	}
 	
+	.submitknapp{
+		font-size: 140px;
+		position: absolute;
+		width: 85%;
+		text-align: right;
+		top: 65%;
+		float: right;
+		margin-right: 15%;
+		border: 1px solid green ;
+	}
+}		
+
+
+
+
+
 	.button,
 	button,
 	input[type="submit"],
