--- a/www/css/index.css
+++ b/www/css/index.css
@@ -373,9 +373,14 @@ body {
 	img.scale-with-grid {
 		max-width: 100%;
 		height: auto; }
-/* #Buttons
+/* #Custom
 ================================================== */
+.logo{
+	margin-top: 5%;
+	margin-left: 5%;
+	width: 30%;
 	
+}	
 		
 	#form_div {
 		
@@ -417,6 +422,7 @@ body {
 		border: 1px solid green ;
 	}
 }	
+
 /* screen mellan 640 - 800px */
 @media only screen and (min-width: 640px) and (max-width: 800px) {	
 	p{
@@ -455,6 +461,7 @@ body {
 		border: 1px solid green ;
 	}
 }		
+
 /* screen mellan 801 - 1080px */
 @media only screen and (min-width: 801px) and (max-width: 1080px) {	
 	p{
@@ -492,9 +499,16 @@ body {
 		margin-right: 15%;
 		border: 1px solid green ;
 	}
-}		
+}	
+	
 /* min bredd 1080px*/
 @media only screen and (min-width: 1081px){	
+	.logo{
+		margin-top: 5%;
+		margin-left: 5%;
+		width: 15%;
+	
+	}	
 	.textboxA
 	{
 		
