--- a/www/css/index.css
+++ b/www/css/index.css
@@ -65,7 +65,7 @@ body {
 /* #Base 960 Grid
 ================================================== */
 
-    .container                                  { position: relative; width: 100%; margin: 0 auto; padding-top: 40%;}
+    .container                                  { position: relative; width: 100%; margin: 0 auto; padding-top: 30%}
     .container .column,
     .container .columns                         { float: left; display: inline; /*margin-left: 10px; margin-right: 10px;*/ }
     .row                                        { margin-bottom: 20px; }
@@ -83,7 +83,7 @@ body {
     .container .five.columns                    { width: 280px; }
     .container .six.columns                     { width: 340px; }
     .container .seven.columns                   { width: 400px; }
-    .container .eight.columns                   { width: 50%; }
+    .container .eight.columns                   { width: 50%; 	}
     .container .nine.columns                    { width: 520px; }
     .container .ten.columns                     { width: 580px; }
     .container .eleven.columns                  { width: 640px; }
@@ -379,6 +379,7 @@ body {
 	margin-top: 5%;
 	margin-left: 5%;
 	width: 30%;
+	position: fixed;
 	
 }	
 		
