--- a/www/css/index.css
+++ b/www/css/index.css
@@ -344,8 +344,8 @@ body {
 
 /* #Links
 ================================================== */
-	a, a:visited { color: #333; text-decoration: underline; outline: 0; }
-	a:hover, a:focus { color: #000; }
+	a, a:visited { color: #fff; text-decoration: underline; outline: 0; font-size: 50px; }
+	a:hover, a:focus { color: #fff; }
 	p a, p a:visited { line-height: inherit; }
 
 
