--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -22,8 +22,21 @@
 	table {
 		border-collapse: collapse;
 		border-spacing: 0;
-		border: 2px solid black }
+		border: 2px solid black;
+		width: 100%;
+		height: 100%;
+		}	
+	a img{
+		width: 100%;
+		height: auto;
 
+	}
+
+	/*td {
+		width: 50px;
+		border: 4px solid black;
+		height: 50px;
+	}*/
 * {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
