--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -22,14 +22,19 @@
 	table {
 		border-collapse: collapse;
 		border-spacing: 0;
-		border: 2px solid black;
 		width: 100%;
 		height: 100%;
-		}	
+		}
+	td{
+		/*border: 2px solid white;*/
+		text-align: center;
+		vertical-align: middle;
+		width: auto;
+		height: auto;
+	}
 	a img{
 		width: 100%;
 		height: auto;
-
 	}
 
 	/*td {
