--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -19,23 +19,32 @@
 	q:before, q:after {
 		content: '';
 		content: none; }
-	table {
+	#tvatta table {
 		border-collapse: collapse;
 		border-spacing: 0;
 		width: 100%;
 		height: 100%;
 		}
-	td{
+	#tvatta td{
 		/*border: 2px solid white;*/
 		text-align: center;
 		vertical-align: middle;
 		width: auto;
 		height: auto;
 	}
-	a img{
+	#tvatta a img{
 		width: 100%;
 		height: auto;
 	}
+	#byggnad td{
+
+		text-align: center;
+	}	
+	table{
+		width: 100%;
+		height: 100%;
+	}
+	
 
 	/*td {
 		width: 50px;
