--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -32,7 +32,7 @@
 		/*border: 2px solid white;*/
 		text-align: center;
 		vertical-align: middle;
-		width: 50%;
+		width: 25%;
 		height: auto;
 	}
 	#navtablebottom td{
@@ -43,8 +43,11 @@
 		height: auto;
 	}
 	a {
-		text-decoration: none
-		
+		text-decoration: underline;
+	}
+	
+	.overskrift{
+		text-align: center;
 	}
 	.typlokal{
 		padding: 2%;
@@ -238,7 +241,7 @@ body {
 
 /* #Links
 ================================================== */
-	a, a:visited { color: #fff; text-decoration: none; outline: 0; font-size: 50px; }
+	a, a:visited { color: #fff; outline: 0; font-size: 50px; }
 	a:hover, a:focus { color: #fff; }
 	p a, p a:visited { line-height: inherit; }
 
@@ -289,7 +292,7 @@ body {
 	}
 	
 	#navtvatta a{
-		font-size: 13px;
+		font-size: 20px;
 	}	
 	
 	#navtvatta b{
@@ -318,7 +321,10 @@ body {
 		font-size: 12px;
 		
 	}
-	
+	a{
+		font-size: 12px;
+		
+	}
 	
 	.textboxA
 	{
@@ -354,6 +360,11 @@ body {
 
 /* screen mellan 240 - 320px */
 @media only screen and (min-width: 321px) and (max-width: 479px) {	
+	
+	a{
+		font-size: 16px;
+		
+	}
 	
 	#navtvatta a{
 		font-size: 16px;
@@ -417,6 +428,12 @@ body {
 /* screen mellan 480 - 639px */
 @media only screen and (min-width: 480px) and (max-width: 639px) {	
 	
+	a{
+		font-size: 25px;
+		
+	}
+	
+	
 	#navtvatta a{
 		font-size: 25px;
 		
@@ -475,6 +492,11 @@ body {
 /* screen mellan 640 - 800px */
 @media only screen and (min-width: 640px) and (max-width: 800px) {	
 	
+	a{
+		font-size: 35px;
+		
+	}
+	
 	#navtvatta a{
 		font-size: 30px;
 		
@@ -530,6 +552,11 @@ body {
 
 /* screen mellan 801 - 1080px */
 @media only screen and (min-width: 801px) and (max-width: 1080px) {	
+	
+	a{
+		font-size: 40px;
+		
+	}
 	
 	#navtvatta a{
 		font-size: 35px;
@@ -587,6 +614,12 @@ body {
 	
 /* min bredd 1080px*/
 @media only screen and (min-width: 1081px){	
+	
+	a{
+		font-size: 50px;
+		
+	}
+	
 	#navtvatta a{
 		font-size: 40px;
 		
