Lagt in historik i appen

--- a/www/testar/css/tvatta.css
+++ b/www/testar/css/tvatta.css
@@ -21,12 +21,6 @@
 		content: none; }
 			
 	
-	#navtvatta{
-		/*display: none;*/
-	}
-	#navnummer{
-		/*display: none;*/
-	}
 	
 	#navtvatta table {
 		border-collapse: collapse;
@@ -38,39 +32,31 @@
 		/*border: 2px solid white;*/
 		text-align: center;
 		vertical-align: middle;
-		width: 25%;
+		width: auto;
 		height: auto;
 	}
-	
-	#navtablebottom td{
-		/*border: 2px solid white;*/
-		text-align: center;
-		vertical-align: middle;
-		width: 50%;
-		height: auto;
+	a {
+		text-decoration: none
+		
 	}
-	#navtvatta a{
-		/*border-bottom: 2px solid #fff;
-		padding-bottom: 3px;*/
+	.typlokal{
+		padding: 2%;
 	}
 	
-	.overskrift{
-		text-align: center;
+	.typlokallank{
+		background-color: #ccc;	
 	}
-	
-	.lokalnav, .typlokal{
+	.lokalnav{
 		padding: 2%;
 	}
 	
 	.navknapparlank{
 		padding: 2%;
-		/*background-color: #ccc;*/
+		background-color: #ccc;
 	}
 	
-	.lokalnavlank, .typlokallank{
-		color: #000;
-		background-color: #fff;
-		/*display: none;*/
+	.lokalnavlank{
+		background-color: #ccc;
 	}
 	
 	#navtvatta a{
@@ -78,14 +64,14 @@
 	}
 	
 	#tvatta table {
-		-webkit-animation-direction: normal;
-		animation-direction:alternate;
 		border-collapse: collapse;
 		border-spacing: 0;
 		width: 100%;
 		height: 100%;
 		}
-	
+	/*.bokningstider p{
+		font-size: 75%;
+	}*/
 	.bokningsikoner{
 		padding: 2%;
 	}	
@@ -247,7 +233,7 @@ body {
 
 /* #Links
 ================================================== */
-	a, a:visited { outline: 0; font-size: 50px; }
+	a, a:visited { color: #fff; text-decoration: none; outline: 0; font-size: 50px; }
 	a:hover, a:focus { color: #fff; }
 	p a, p a:visited { line-height: inherit; }
 
@@ -298,7 +284,7 @@ body {
 	}
 	
 	#navtvatta a{
-		font-size: 20px;
+		font-size: 13px;
 	}	
 	
 	#navtvatta b{
@@ -307,7 +293,7 @@ body {
 	}
 	
 	.bokningsdatum p{
-		font-size: 10px;
+		font-size: 6px;
 	}
 	
 	.bokningstider p{
@@ -317,9 +303,6 @@ body {
 	
 	
 	.logo{
-	animation-direction: normal;
-	animation-duration:2s;
-	-webkit-animation-duration:2s;
 	margin-top: 5%;
 	margin-left: 5%;
 	width: 35%;
@@ -330,10 +313,7 @@ body {
 		font-size: 12px;
 		
 	}
-	a{
-		font-size: 12px;
-		
-	}
+	
 	
 	.textboxA
 	{
@@ -370,11 +350,6 @@ body {
 /* screen mellan 240 - 320px */
 @media only screen and (min-width: 321px) and (max-width: 479px) {	
 	
-	a{
-		font-size: 16px;
-		
-	}
-	
 	#navtvatta a{
 		font-size: 16px;
 		
@@ -392,10 +367,10 @@ body {
 	position: fixed;
 	}
 	.bokningsdatum p{
-		font-size: 15px;
+		font-size: 9px;
 	}
 	.bokningstider p{
-	font-size: 9px;
+	font-size: 11px;
 	}
 	
 	p{
@@ -437,12 +412,6 @@ body {
 /* screen mellan 480 - 639px */
 @media only screen and (min-width: 480px) and (max-width: 639px) {	
 	
-	a{
-		font-size: 25px;
-		
-	}
-	
-	
 	#navtvatta a{
 		font-size: 25px;
 		
@@ -455,11 +424,11 @@ body {
 
 	
 	.bokningstider p{
-	font-size: 14px;
+	font-size: 15px;
 	}
 	
 	.bokningsdatum p{
-		font-size: 25px;
+		font-size: 15px;
 	}
 	
 	p{
@@ -501,11 +470,6 @@ body {
 /* screen mellan 640 - 800px */
 @media only screen and (min-width: 640px) and (max-width: 800px) {	
 	
-	a{
-		font-size: 35px;
-		
-	}
-	
 	#navtvatta a{
 		font-size: 30px;
 		
@@ -520,7 +484,7 @@ body {
 	font-size: 20px;
 	}
 	.bokningsdatum p{
-		font-size: 30px;
+		font-size: 20px;
 	}
 	
 	p{
@@ -562,11 +526,6 @@ body {
 /* screen mellan 801 - 1080px */
 @media only screen and (min-width: 801px) and (max-width: 1080px) {	
 	
-	a{
-		font-size: 40px;
-		
-	}
-	
 	#navtvatta a{
 		font-size: 35px;
 		
@@ -582,7 +541,7 @@ body {
 	}
 	
 	.bokningsdatum p{
-		font-size: 40px;
+		font-size: 25px;
 	}
 	
 	p{
@@ -623,12 +582,6 @@ body {
 	
 /* min bredd 1080px*/
 @media only screen and (min-width: 1081px){	
-	
-	a{
-		font-size: 50px;
-		
-	}
-	
 	#navtvatta a{
 		font-size: 40px;
 		
@@ -640,10 +593,10 @@ body {
 	}
 	
 	.bokningstider p{
-	font-size: 35px;
+	font-size: 30px;
 	}
 	.bokningsdatum p{
-		font-size: 50px;
+		font-size: 30px;
 	}
 	.logo{
 		margin-top: 5%;
