--- a/www/css/index.css
+++ b/www/css/index.css
@@ -42,6 +42,119 @@ body {
 	color: #fff;
 }
 
+/*.bakgrundinformation_hide{
+	z-index: -1;
+
+}
+
+.bakgrundinformation_show{
+	z-index: 1;
+	background-color: #fff;
+	-webkit-opacity: 0.5;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+}
+
+.inforuta_hide{
+	display: none;
+	height: auto;
+	top: 20%;
+	width: 60%;
+	margin-left: 20%;
+	color: #FFF;
+	background-color: #252c47;
+	padding: 3%;
+	border-radius: 50px;
+	font-size: 1.5vw;
+	-webkit-animation:myfirst 0.5s; /* Safari and Chrome */	
+	
+/*}
+
+.inforuta_ani_hide{
+	-webkit-opacity: 0;
+	z-index: 2;
+	position: absolute;
+	height: auto;
+	top: 20%;
+	width: 60%;
+	margin-left: 20%;
+	color: #252c47;
+	background-color: #000;
+	padding: 3%;
+	border-radius: 50px;
+	font-size: 0px;
+	-webkit-animation:myfirst 0.5s; /* Safari and Chrome */
+/*	-webkit-animation-direction: reverse;
+	
+}
+.inforuta{
+
+	z-index: 2;
+	position: absolute;
+	height: auto;
+	top: 20%;
+	width: 60%;
+	margin-left: 20%;
+	color: #FFF;
+	background-color: #252c47;
+	padding: 3%;
+	border-radius: 50px;
+	font-size: 1.5vw;
+	-webkit-animation:myfirst 0.5s; /* Safari and Chrome */
+/*	
+}
+.rutaett{
+	float: left;
+}
+.rutatva{
+	float: left;
+	vertical-align: bottom;
+}
+.rutatva a{
+	vertical-align: bottom;
+	font-size: 1.5vw;
+	text-decoration: none;
+	
+}
+@-webkit-keyframes myfirst{
+	0% {
+		-webkit-opacity: 0;
+		color: #fff;
+		font-size: 1.5vh;
+		width: 10%;
+		margin-left: 70%;
+		top: 5%;
+	}
+	
+	100% {	
+		font-size: 1.5vh;
+		top: 20%;
+		width: 60%;
+		margin-right: 10%;
+		-webkit-opacity: 1;
+	}
+	
+}*/
+
+#uppernav{
+	width: 100%;
+	height: 20%;
+	text-align: center;
+	display: none;
+}
+#uppernav td{
+	/*border: solid #fff;*/
+	width: 33%;
+	vertical-align: middle;
+}
+
+
+
+
+
+
+
 /*
 * Skeleton V1.2
 * Copyright 2011, Dave Gamache
@@ -377,6 +490,13 @@ body {
 	img.scale-with-grid-logo {
 		max-width: 100%;
 		height: auto; }	
+	
+	img.scale-with-grid-logo-small {
+		max-width: 33%;
+		height: auto;
+		margin-top: 2%;
+		}
+	
 /* #Custom
 ================================================== */
 .logo{
