--- a/www/css/index.css
+++ b/www/css/index.css
@@ -138,11 +138,16 @@ body {
 }*/
 
 #uppernav{
-	width: 100%;
-	height: 20%;
-	text-align: center;
-	display: none;
-}
+		padding-top: 1%;
+		width: 100%;
+		height: 20%;
+		text-align: center;
+		display: none;
+		padding-bottom: 1%;
+		/*margin-bottom: 2%;*/
+		border-bottom: 2px solid #fff;
+		}
+
 #uppernav td{
 	/*border: solid #fff;*/
 	width: 33%;
