--- a/www/css/index.css
+++ b/www/css/index.css
@@ -548,6 +548,19 @@ body {
 	}
 
 
+	.felinlogg{
+		margin-left: 15%;
+		top: 49%;
+		font-weight: bold;
+		position: absolute;
+		font-size: 3.4vw;
+		color: red;
+	}
+	.hemmameddelande{
+		margin-left: 10%;
+		z-index: 1;
+		padding-top: 30%;
+	}
 
 
 /* screen mellan 240 - 320px */
