--- a/www/css/animationer.css
+++ b/www/css/animationer.css
@@ -1,3 +1,12 @@
+.spinner{
+	position: absolute;
+	z-index: 2;
+	top: 50%;
+	margin: 20%;
+}
+
+
+
 .bakgrundinformation_hide{
 	display: none;
 	z-index: -1;
