--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -27,10 +27,12 @@
 		padding-bottom: 2%;
 	}
 	
+	
+	
 	#uppernav{	 
 		position: fixed;
 		z-index: 1;
-		padding-top: 1%;
+		/*padding-top: 1%;*/
 		width: 100%;
 		height: 10%;
 		text-align: center;
@@ -47,10 +49,12 @@
 		}			
 	.uppernavclass{
 		background-color: #252c47;
+		/*height: 10%;*/
 		
 	}
 	
 	#navtvatta{
+		/*margin-top: 30%;*/
 		/*display: none;*/
 
 	}
@@ -60,6 +64,7 @@
 	}
 	
 	#navtvatta table {
+		
 		border-collapse: collapse;
 		border-spacing: 0;
 		width: 100%;
@@ -88,6 +93,7 @@
 	}
 	
 	.overskrift{
+		padding-top: 30%;
 		text-align: center;
 		padding-top: 2%;
 		padding-bottom: 2%;
