--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -34,10 +34,10 @@
 		z-index: 1;
 		/*padding-top: 1%;*/
 		width: 100%;
-		height: 10%;
+		height: 0%;
 		text-align: center;
 		display: table;
-		padding-bottom: 1%;
+		/*padding-bottom: 1%;*/
 		/*margin-bottom: 2%;*/
 		border-bottom: 2px solid #fff;
 		}
