--- a/www/css/animationer.css
+++ b/www/css/animationer.css
@@ -1,9 +1,10 @@
-.spinner{
+/*.spinner{
 	position: absolute;
 	z-index: 2;
 	top: 50%;
-	margin-left: 50%;
-}
+	left: 570%;
+	margin-right: 110;
+}*/
 
 
 
