--- a/www/css/loading.css
+++ b/www/css/loading.css
@@ -1,9 +1,8 @@
 #loading{
 	z-index: 1;
-	height: 20px;
-	/*top: 50%;*/
-	/*position: absolute;*/
-	margin-left: 10%;
+	left: 50%;
+	margin-left: -110px;
+	position: fixed;
 	
 }
 
