--- a/www/css/index.css
+++ b/www/css/index.css
@@ -136,9 +136,11 @@ body {
 	}
 	
 }*/
-
-	#uppernav{
+	#helamenyn{
 		position: fixed;
+	}
+	#uppernav{
+		/*position: fixed;*/
 		z-index: 1;
 		padding-top: 1%;
 		width: 100%;
