--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -27,10 +27,12 @@
 		padding-bottom: 2%;
 	}
 	
-	
+	#helamenyn{
+		position: fixed;
+	}
 	
 	#uppernav{	 
-		position: fixed;
+		/*position: fixed;*/
 		z-index: 1;
 		/*padding-top: 1%;*/
 		width: 100%;
