--- a/www/css/index.css
+++ b/www/css/index.css
@@ -196,9 +196,12 @@ body {
 /* #Base 960 Grid
 ================================================== */
 
-    .container                                  { position: relative; width: 100%; margin: 0 auto; padding-top: 40%;}
+    .container                                  { position: absolute; width: 100%; /*margin: 0 auto; */
+    											/*padding-top: 40%;*/
+    											top: 50%;
+    											}
     .container .column,
-    .container .columns                         { float: left; display: inline; /*margin-left: 10px; margin-right: 10px;*/ }
+    .container .columns                         { float: left; /*display: inline; margin-left: 10px; margin-right: 10px;*/ }
     .row                                        { margin-bottom: 20px; }
 
     /* Nested Column Classes */
@@ -214,7 +217,11 @@ body {
     .container .five.columns                    { width: 280px; }
     .container .six.columns                     { width: 340px; }
     .container .seven.columns                   { width: 400px; }
-    .container .eight.columns                   { width: 50%; 	}
+    .container .eight.columns                   { width: 50%;
+
+    											margin: -50px 0 0;
+    											
+    }
     .container .nine.columns                    { width: 520px; }
     .container .ten.columns                     { width: 580px; }
     .container .eleven.columns                  { width: 640px; }
@@ -222,7 +229,9 @@ body {
     .container .thirteen.columns                { width: 760px; }
     .container .fourteen.columns                { width: 820px; }
     .container .fifteen.columns                 { width: 880px; }
-    .container .sixteen.columns                 { width: 100%;	}
+    .container .sixteen.columns                 { width: 100%;
+    											 
+     }
 
     .container .one-third.column                { width: 300px; }
     .container .two-thirds.column               { width: 620px; }
