--- a/www/css/index.css
+++ b/www/css/index.css
@@ -218,7 +218,6 @@ body {
     .container .six.columns                     { width: 340px; }
     .container .seven.columns                   { width: 400px; }
     .container .eight.columns                   { width: 50%;
-
     											margin: -50px 0 0;
     											
     }
@@ -563,12 +562,13 @@ body {
 	}
 	
 	#loggaut{
-		position: relative;
+		position: absolute;
 		text-align: center;
 		float: left;
 		background: #aaa;
 		border: 0px;
 		color: #fff;
+		bottom: 0%;
 	}
 	
 	
