--- a/www/css/index.css
+++ b/www/css/index.css
@@ -196,10 +196,8 @@ body {
 /* #Base 960 Grid
 ================================================== */
 
-    .container                                  { position: absolute; width: 100%; /*margin: 0 auto; */
-    											/*padding-top: 40%;*/
-    											top: 50%;
-    											margin: -353px 0 0;
+    .container                                  { position: relative; width: 100%; /*margin: 0 auto; */
+    											padding-top: 40%;
     											}
     .container .column,
     .container .columns                         { float: left; /*display: inline; margin-left: 10px; margin-right: 10px;*/ }
@@ -218,8 +216,7 @@ body {
     .container .five.columns                    { width: 280px; }
     .container .six.columns                     { width: 340px; }
     .container .seven.columns                   { width: 400px; }
-    .container .eight.columns                   { width: 50%;
-    											
+    .container .eight.columns                   { width: 50%;   										
     											
     }
     .container .nine.columns                    { width: 520px; }
@@ -511,6 +508,7 @@ body {
 ================================================== */
 
 	img.scale-with-grid {
+
 		max-width: 100%;
 		height: auto; }
 		
