--- a/www/css/animationer.css
+++ b/www/css/animationer.css
@@ -140,6 +140,7 @@ img.scale-with-grid-tvatt-information{
 	height: auto;
 	padding-top: 10px;
 	width: 20%;
+	vertical-align: middle;
 }
 
 .rutaett{
