--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -156,7 +156,8 @@
 
 	#tvatta{
 		padding-top: 6%;
-	}	
+	}
+		
 	#tvatta table {
 		-webkit-animation-direction: normal;
 		animation-direction:alternate;
@@ -177,8 +178,8 @@
 	
 	#tvatta td{
 		/*border: 2px solid white;*/
-		text-align: center;
-		vertical-align: middle;
+		/*text-align: center;
+		vertical-align: middle;*/
 		width: auto;
 		height: auto;
 	}
