--- a/www/css/tvatta.css
+++ b/www/css/tvatta.css
@@ -177,7 +177,7 @@
 	}
 	
 	#tvatta td{
-		border: 1px solid white;
+		/*border: 1px solid white;*/
 		text-align: center;
 		vertical-align: middle;
 		width: auto;
