--- a/www/css/index.css
+++ b/www/css/index.css
@@ -10,7 +10,8 @@
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block; }
 	body {
-		line-height: 1; }
+		line-height: 1;
+		height: 95%; }
 	ol, ul {
 		list-style: none; }
 	blockquote, q {
