--- a/www/css/index.css
+++ b/www/css/index.css
@@ -11,7 +11,7 @@
 		display: block; }
 	body {
 		line-height: 1;
-		height: 95%; }
+		}
 	ol, ul {
 		list-style: none; }
 	blockquote, q {
@@ -33,10 +33,10 @@ body {
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
     background-color:#252c47;
-    background-attachment:fixed;
+    /*background-attachment:fixed;*/
     font-family: Arial, sans-serif;
     font-size:24px;
-    height:100%;
+    height:95%;
     margin:0px;
     padding:0px;
     width:100%;
@@ -167,7 +167,10 @@ body {
 	width: 33%;
 	vertical-align: middle;
 	}
-
+	
+	#index{
+		height: 95%;
+	}
 
 
 
