--- a/www/css/animationer.css
+++ b/www/css/animationer.css
@@ -33,7 +33,7 @@
 	color: #FFF;
 	background-color: #252c47;
 	padding: 3%;
-	border-radius: 50px;
+	/*border-radius: 50px;*/
 	font-size: 1.0vw;
 	-webkit-animation:myfirst 0.5s; /* Safari and Chrome */	
 	
@@ -49,7 +49,7 @@
 	margin-left: 5%;
 	color: #252c47;
 	padding: 3%;
-	border-radius: 50px;
+	/*border-radius: 50px;*/
 	font-size: 0px;
 	-webkit-animation:myfirst 0.5s; /* Safari and Chrome */
 	-webkit-animation-direction: reverse;
@@ -66,7 +66,9 @@
 	color: #FFF;
 	background-color: #252c47;
 	padding: 3%;
-	border-radius: 50px;
+	border-radius: 5px;
+	border: solid #fff 2px;
+	/*box-shadow: 1px 1px 1px 15px black;*/
 	font-size: 1.0vw;
 	-webkit-animation:myfirst 0.5s; /* Safari and Chrome */
 	
@@ -120,7 +122,7 @@ img.scale-with-grid-tvatt-information{
 .information-text-middle-start{
 	vertical-align: middle;
 	width: 100%;
-	font-size: 1.5vh;
+	/*font-size: 1.5vh;*/
 	/*padding-top: 10px;*/
 	padding-left: 10px;
 	/*padding-bottom: 10%;*/
@@ -134,7 +136,7 @@ img.scale-with-grid-tvatt-information{
 	float: left;
 	vertical-align: middle;
 	width: 100%;
-	font-size: 1.0vh;
+	/*font-size: 1.0vh;*/
 	padding-top: 2%;
 	
 }
