--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -38,6 +38,7 @@
     <preference name="android-installLocation"    value="auto" />           <!-- android: app install location. 'auto' will choose. 'internalOnly' is device memory. 'preferExternal' is SDCard. -->
     <preference name="DisallowOverscroll" value="true" />
     <preference name="UIWebViewBounce" value="false" />
+    <preference name="SuppressesIncrementalRendering" value="true"/>
 
     <!-- Plugins -->
 
