--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -44,7 +44,7 @@
     <preference name="android-installLocation"    value="auto" />           <!-- android: app install location. 'auto' will choose. 'internalOnly' is device memory. 'preferExternal' is SDCard. -->
     <preference name="DisallowOverscroll" value="true" />
     <preference name="UIWebViewBounce" value="false" />
-    <preference name="SuppressesIncrementalRendering" value="true"/>
+    <!--<preference name="SuppressesIncrementalRendering" value="true"/>-->
     
     <!--<preference name="StatusBarBackgroundColor" value="#252c47" />-->
 
@@ -67,7 +67,7 @@
     <gap:plugin name="org.apache.cordova.inappbrowser" />
     <!-- <gap:plugin name="org.apache.cordova.media" /> -->
     <gap:plugin name="org.apache.cordova.network-information" />
-    <gap:plugin name="com.phonegap.plugin.statusbar" />
+    <!--<gap:plugin name="com.phonegap.plugin.statusbar" />-->
 	<!--    <gap:plugin name="org.apache.cordova.splashscreen" />
     <gap:plugin name="org.apache.cordova.vibration" /> -->
 
