--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -46,7 +46,7 @@
     <preference name="UIWebViewBounce" value="false" />
     <!--<preference name="SuppressesIncrementalRendering" value="true"/>-->
     
-    <!--<preference name="StatusBarBackgroundColor" value="#252c47" />-->
+    <preference name="StatusBarBackgroundColor" value="#252c47" />
 
     <!-- Plugins -->
 
@@ -67,8 +67,8 @@
     <gap:plugin name="org.apache.cordova.inappbrowser" />
     <!-- <gap:plugin name="org.apache.cordova.media" /> -->
     <gap:plugin name="org.apache.cordova.network-information" />
-    <!--<gap:plugin name="com.phonegap.plugin.statusbar" />-->
-	<!--    <gap:plugin name="org.apache.cordova.splashscreen" />
+    <gap:plugin name="com.phonegap.plugin.statusbar" />
+	<!--<gap:plugin name="org.apache.cordova.splashscreen" />
     <gap:plugin name="org.apache.cordova.vibration" /> -->
 
     <!-- Third party plugins -->
