--- a/www/res/xml/config.xml
+++ b/www/res/xml/config.xml
@@ -21,7 +21,7 @@
         following tag to your config.xml; you will still have the INTERNET
         permission on your app, which PhoneGap requires.
     -->
-        <preference name="permissions"                value="none"/>
+        
 	
 		
     
@@ -30,6 +30,7 @@
         </feature>
 	
     <!-- Customize your app and platform with the preference element. -->
+	<preference name="permissions"                value="nome"/>
     <preference name="phonegap-version"           value="3.1.0" />          <!-- all: current version of PhoneGap -->
     <preference name="orientation"                value="portrait" />        <!-- all: default means both landscape and portrait are enabled -->
     <preference name="target-device"              value="handset" />      <!-- all: possible values handset, tablet, or universal -->
